# CGRA-ME

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  README.md  cgrame_env
arch/simple/: arch-hetero-diag.xml  arch-hetero-orth.xml  arch-homo-diag.xml  arch-homo-orth.xml
arch/simple/archfiles/: arch-homo-diag.xml  arch-homo-orth.xml  archfile.xml
benchmarks/: exp_conf.py  experiment_runner  rules.mk
benchmarks/microbench/: Makefile
benchmarks/microbench/accumulate/: accumulate.c
benchmarks/microbench/cap/: cap.c
benchmarks/microbench/conv2/: conv2.c
benchmarks/microbench/conv3/: conv3.c
benchmarks/microbench/mac2/: mac2.c
benchmarks/microbench/matrixmultiply/: matrixmultiply.c
benchmarks/microbench/mults1/: mults1.c
benchmarks/microbench/mults2/: mults2.c
benchmarks/microbench/two_loops/: Makefile  two_loops.c
benchmarks/userbench/: README
cmake/: FindGurobi.cmake
doc/: Doxyfile  Makefile  make.bat
doc/source/: conf.py  gettingstarted.rst  index.rst  limitation.rst  userguide.rst
doc/source/_static/: README
doc/source/_templates/: README
doc/ubuntu-llvm-fix/: LLVMConfig.cmake  LLVMExports-relwithdebinfo.cmake
inc/CGRA/: AnnealMapper.h  BitSetting.h  CGRA.h  Exception.h  ILPMapper.h  MRRG.h  Mapper.h  Mapping.h  Module.h  ModuleComposites.h  OpGraph.h  Visual.h  adlparse.h  dotparse.h
inc/CGRA/user-inc/: UserArchs.h  UserFunction.h  UserModules.h
llvm-passes/: CMakeLists.txt
llvm-passes/DFG/: CMakeLists.txt  DFGGeneration.cpp  LoopParser.py
src/: CMakeLists.txt
src/adl_0/: CMakeLists.txt  adl.cpp  adl.h  adl_parser.cpp  grid.cpp  macro.cpp  module.cpp  template_xml.h
src/adl_1/: ADLParser.cpp  ADLParser.h  ADLStructs.cpp  ADLStructs.h  CMakeLists.txt  SyntacticSugar.cpp  SyntacticSugar.h  module_templates.xml
src/archs/: AdresArch.cpp  CMakeLists.txt  SimpleArch.cpp
src/core/: AnnealMapper.cpp  BitSetting.cpp  BitStream.cpp  CGRA.cpp  CMakeLists.txt  ILPMapper.cpp  MRRG.cpp  Mapper.cpp  Mapping.cpp  Module.cpp  ModuleComposites.cpp  ModuleFuncUnit.cpp  ModuleRoutingStructures.cpp  OpGraph.cpp
src/dotparser/: CMakeLists.txt  dfgdot.l  dfgdot.tab.cc  dfgdot.tab.h  dfgdot.y  dfgdot.yy.cc  dfgdot_driver.cc  dfgdot_driver.h  dotparser.cc
src/modules/: AdresPE.cpp  CMakeLists.txt  SimpleArchFU.cpp
src/run/: CMakeLists.txt  cgrame.cpp  mapper_config.ini
src/visual/: CGRA.html  CMakeLists.txt  Visual.cpp  visual.partial.js
